--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', 'Arial', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
@@ -79,6 +79,7 @@ ol {
 .search-form {
   display: flex;
   justify-content: space-between;
+  gap: 40px;
 }
 
 .search-form__fieldset {
@@ -98,6 +99,9 @@ ol {
 .search-form__label {
   width: fit-content;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .search-form__textfield {
@@ -109,7 +113,7 @@ ol {
   border-width: 1px 0px;
   border-style: solid;
   border-color: #FFFFFF;
-  color: #fff;
+  color: inherit;
   font-family: inherit;
   font-style: normal;
   font-weight: 400;
@@ -147,11 +151,11 @@ ol {
   cursor: pointer;
   padding: 6px 0;
   text-align: center;
+  width: 100%;
 }
 
 .search-form__submit-button {
   align-self: flex-end;
-  width: 190px;
 }
 
 .search-form__label:focus {
@@ -183,12 +187,13 @@ ol {
 }
 
 .title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
   text-transform: uppercase;
+  padding-top: 6px; 
 }
 
 .content__accent {
@@ -196,13 +201,9 @@ ol {
 }
 
 .content__list {
-  overflow-y:scroll;
+  overflow-y: auto;
   position: relative;
-  block-size: 298px;
-}
-
-.content__list::-webkit-scrollbar {
-  display: none;
+  block-size: 300px;
 }
 
 .content__list-item:not(:last-child) {
@@ -212,9 +213,9 @@ ol {
 .content__details {
   display: flex;
   flex-direction: column;
-  justify-content: start;
   width: 35%;
-  gap: 26px;
+  gap: 21px;
+  inline-size: 100%;
 }
 
 .content__video-card {
@@ -229,22 +230,28 @@ ol {
   object-position: center;
 }
 
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  padding: 2px 0;
+  max-width: 200px;
+  gap: 6px;
+}
+
 .content__video-card-title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
-  padding: 2px 2px 5px;
 }
 
 .content__video-card-description {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 16.2px;
-  padding: 0 2px;
+  line-height: 90%;
 }
   
 .content__card-link {
@@ -270,14 +277,9 @@ ol {
   outline: 1px solid #fff;
 }
 
-.content__card-link:hover .content__video-card-title,
-.content__card-link:hover .content__video-card-description {
+.content__card-link:hover {
   text-decoration: underline;
   text-underline-offset: 5px;
-}
-
-.more-button {
-  width: 100%;
 }
 
 .button:active {
@@ -294,5 +296,5 @@ ol {
 
 .button:focus-visible {
   outline: 1px solid #fff;
-  outline-offset: 1px;
+  outline-offset: -3px;
 }
